Simple multiplayer, still many issues though

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>RIP</title>
-    <script src="//cdn.jsdelivr.net/phaser/2.6.0/phaser.min.js"></script>
+  <title>P@oBall</title>
+  <meta charset="utf-8">
+  <script type="text/javascript" src="web_socket/swfobject.js"></script>
+  <script type="text/javascript" src="web_socket/web_socket.js"></script>
+  <script src="//cdn.jsdelivr.net/phaser/2.6.0/phaser.min.js"></script>
 </head>
 <body>
     <script src="Logic/game.js"></script>
